# cdr3-parser

./: .gitignore  Cargo.toml  README.md  build.sh  python.csv  rustfmt.toml
src/: app.rs  main.rs
src/cdr3/: cdr3.rs  isoelectric_point.rs  mod.rs  protein_analysis.rs  proteins.rs
