[package]
name = "cdr3-parser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "0.34.0"
clap = "2.27.0"
csv = "1.1.6"
lazy_static = "1.4.0"
rayon = "1.5.1"
regex = "1"
serde = "1.0.117"
serde_with = "1.5.1"
serde_json = "1.0.59"
velcro = "0.5.3"
